[package]
name = "clawrtc"
version = "0.1.0"
edition = "2021"
authors = ["Elyan Labs <sophia.eagent@gmail.com>"]
description = "RustChain RTC miner client — hardware attestation, Ed25519 wallets, and Proof-of-Antiquity mining"
license = "MIT"
repository = "https://github.com/Scottcjn/Rustchain"
homepage = "https://rustchain.org"
documentation = "https://docs.rs/clawrtc"
readme = "README.md"
keywords = ["rustchain", "mining", "cryptocurrency", "proof-of-antiquity", "hardware-attestation"]
categories = ["api-bindings", "cryptography"]

[dependencies]
reqwest = { version = "0.13", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
sha2 = "0.11"
hex = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.10"
